--- a/webfiles/css-js/mstyle/css/mbr-additional.css
+++ b/webfiles/css-js/mstyle/css/mbr-additional.css
@@ -4891,7 +4891,7 @@ body {
 .cid-qJOOJfyYZ6 table {
   width: 100% !important;
   margin-top: 6px;
-  border: 1px solid #ffffff;
+  border: 1px solid #232323;
   margin-bottom: 0;
 }
 .cid-qJOOJfyYZ6 table th {
